# sustaina-dependency-oracle

./: .env.example  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  Makefile  SECURITY.md  TESTING.md  docker-compose.yml
.github/workflows/: test.yml
apps/explorer-ui/src/app/: globals.css  layout.tsx  page.tsx
apps/explorer-ui/src/store/: useGraphStore.ts
cli/sustaina-cli/: Cargo.toml
cli/sustaina-cli/src/: errors.rs  main.rs  resolver.rs
contracts/identity-registry/: Cargo.toml
contracts/identity-registry/src/: lib.rs
oracle-service/: .dockerignore  .eslintrc.json  package.json  tsconfig.json
oracle-service/src/: index.ts  signer.ts
sustaina-dependency-oracle/: .env.production  .gitignore  Cargo.toml  DEVELOPMENT.md  QUICK_START.md  README.md  STATUS.md
sustaina-dependency-oracle/.github/workflows/: docker-publish.yml
sustaina-dependency-oracle/apps/explorer-ui/: .dockerignore  .eslintrc.json  Dockerfile  package.json  tsconfig.json
sustaina-dependency-oracle/cli/sustaina-cli/src/: parser.rs
sustaina-dependency-oracle/contracts/identity-registry/src/: crypto.rs  test.rs
sustaina-dependency-oracle/oracle-service/: .env.example  Dockerfile
sustaina-dependency-oracle/oracle-service/src/: oidc.ts
