[package]
name = "sustaina-cli"
version = "1.0.0"
edition = "2021"
description = "CLI tool for analyzing dependencies and generating Sustaina Split contracts"

[[bin]]
name = "sustaina"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
