[package]
name = "sustaina-identity-registry"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.0"
soroban-sdk-macros = "20.0"

[dev-dependencies]
soroban-sdk = { version = "20.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
